# onboarding

./: .gitignore  pyproject.toml  readme.md
.github/actions/: publish.yml
github/actions/: publish.yml
optimize_onboarding/: onboarding_fill.py
