[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "optimize_onboarding"
authors = [{name = "Doug Ransom", email = "doug@ransom.vip"}]
readme = "readme.md"
version="1.0"
description = "Utility to help Optimize relationship managers create the 3 onboarding PDF files"
[project.gui-scripts]
new_onboarding_docs = "onboarding_fill"