[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "optimize_onboarding"
authors = [{name = "Doug Ransom", email = "doug@ransom.vip"}]
readme = "readme.md"
version="1.0"
description = "Utility to help Optimize relationship managers create the 3 onboarding PDF files"
requires-python = ">=3.10"

dependencies=["fdfgen >= 0.16.1","PySimpleGUI >= 4.60.4","more_itertools"]
[project.optional-dependencies]
dev=['pyinstaller']

[project.scripts]
#most users would never run this script, they will use a command of the same
#name produced by pyinstaller.
new_onboarding_docs = "optimize_onboarding.onboarding_fill:main"


